style: fix tooltip on mobile and add better code formatting

--- a/src/style/header.css
+++ b/src/style/header.css
@@ -46,6 +46,12 @@
   }
 
   .greeting {
+    display: flex;
+    justify-content: center;
     align-self: center;
   }
+
+  .tooltiptext {
+    margin-top: 34.5px;
+  } 
 }
